--- a/.gitignore
+++ b/.gitignore
@@ -141,6 +141,7 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
+.idea
 .idea/httpRequests
 .idea/caches/build_file_checksums.ser
 
